--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
 <header>
-    <div class="logo">karan</div>
+    <div class="logo">Bindu Sri</div>
     <nav>
         <a href="">Home</a>
         <a href="">Info</a>
